--- a/css/_header.sass
+++ b/css/_header.sass
@@ -6,13 +6,21 @@
     background-attachment: fixed
     background-position: center
 
-
 .header__contenedor-frase
     padding: 0
     height: 100%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
+    -webkit-box-orient: vertical
+    -webkit-box-direction: normal
+    -ms-flex-direction: column
     flex-direction: column
     color: #000
     text-align: center
@@ -21,7 +29,6 @@
     margin-top: 10%
     font-size: 20px
     margin-bottom: 10px
-
 
 .header__frase-autor
     font-weight: 300
