--- a/css/_overlay.sass
+++ b/css/_overlay.sass
@@ -13,6 +13,8 @@
     flex-direction: column
 
 .overlay-info.activo
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
     
 .overlay__titulo
