--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -13,8 +13,14 @@
 
     .logoYcontacto-responsive
         width: 80%
+        display: -webkit-box
+        display: -ms-flexbox
         display: flex
+        -webkit-box-align: center
+        -ms-flex-align: center
         align-items: center
+        -webkit-box-pack: center
+        -ms-flex-pack: center
         justify-content: center
 
     .logoRes__imagen
@@ -24,14 +30,25 @@
     .tel-mailRes__contacto
         width: 100%
         height: 88%
+        display: -webkit-box
+        display: -ms-flexbox
         display: flex
+        -webkit-box-pack: center
+        -ms-flex-pack: center
         justify-content: center
+        -webkit-box-align: start
+        -ms-flex-align: start
         align-items: flex-start
+        -webkit-box-orient: vertical
+        -webkit-box-direction: normal
+        -ms-flex-direction: column
         flex-direction: column
         color: #fff
         font-size: 11px
 
     .tel-mailRes__contenedor
+        display: -webkit-box
+        display: -ms-flexbox
         display: flex
 
     .tel-mailRes__icono
@@ -41,13 +58,17 @@
         margin-right: 10px
 
     .menu-responsive
+        display: -webkit-box
+        display: -ms-flexbox
         display: flex
+        -webkit-box-pack: justify
+        -ms-flex-pack: justify
         justify-content: space-between
         width: 100%
         height: 80px
         position: fixed
         top: 0
-        background: #6c6b6b  
+        background: #6c6b6b
         z-index: 100
 
     .menu-responsive__boton
@@ -71,6 +92,9 @@
     
     .menu__lista
         width: 100%
+        -webkit-box-orient: vertical
+        -webkit-box-direction: normal
+        -ms-flex-direction: column
         flex-direction: column
 
     .menu__lista li
@@ -141,6 +165,9 @@
         width: 15px
 
     footer
+        -webkit-box-orient: vertical
+        -webkit-box-direction: normal
+        -ms-flex-direction: column
         flex-direction: column
 
     .footer__contenedor-imagen,
@@ -170,6 +197,8 @@
 
     .main__articulo
         width: 90%
+        -webkit-box-align: start
+        -ms-flex-align: start
         align-items: flex-start
 
     .main__foto-staff
@@ -188,6 +217,9 @@
         font-size: 20px
 
     .otros-servicios__img-parrafo
+        -webkit-box-orient: vertical
+        -webkit-box-direction: normal
+        -ms-flex-direction: column
         flex-direction: column
         
     .otros-servicios__img
@@ -202,6 +234,9 @@
         font-size: 30px
 
     .formualario-imagenes
+        -webkit-box-orient: vertical
+        -webkit-box-direction: normal
+        -ms-flex-direction: column
         flex-direction: column
 
     .formulario__grupo input,
@@ -214,6 +249,8 @@
     .imagenes-contacto
         width: 100%
         margin: auto
+        -webkit-box-align: center
+        -ms-flex-align: center
         align-items: center
 
     .overlay__contacto
@@ -223,10 +260,16 @@
         font-size: 14px
 
     .overlay__redes
+        display: -webkit-box
+        display: -ms-flexbox
         display: flex
+        -ms-flex-line-pack: center
         align-content: center
+        -webkit-box-pack: center
+        -ms-flex-pack: center
         justify-content: center
         padding: 10px
+        -ms-flex-wrap: wrap
         flex-wrap: wrap
         a i
             font-size: 20px
@@ -263,6 +306,9 @@
         font-size: 10px
         
     #servicios .main__botones
+        -webkit-box-orient: vertical
+        -webkit-box-direction: normal
+        -ms-flex-direction: column
         flex-direction: column
 
     #servicios .main__boton
@@ -291,12 +337,21 @@
         width: 100%
 
     .main__articulo
+        -webkit-box-orient: vertical
+        -webkit-box-direction: normal
+        -ms-flex-direction: column
         flex-direction: column
+        -webkit-box-pack: center
+        -ms-flex-pack: center
         justify-content: center
+        -webkit-box-align: center
+        -ms-flex-align: center
         align-items: center
 
     .imagenes-contacto
         width: 70%
+        -webkit-box-align: center
+        -ms-flex-align: center
         align-items: center
 
     .imagen-contenedor
