--- a/css/_footer.sass
+++ b/css/_footer.sass
@@ -2,20 +2,37 @@ footer
     width: 100%
     height: 100%
     background: #6c6b6b
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
 
 .footer__info
     width: 30%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
 
 .footer__oficina
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-orient: vertical
+    -webkit-box-direction: normal
+    -ms-flex-direction: column
     flex-direction: column
-    margin-right: 30px
+    margin-right: 30px  
     h3, p
         text-align: center
         color: #fff
@@ -24,8 +41,14 @@ footer
 
 .footer__contenedor-imagen
     width: 30%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
     .footer__img
         width: 200px
@@ -35,10 +58,17 @@ footer
 
 .redes-sociales
     width: 30%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -ms-flex-line-pack: center
     align-content: center
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-align: center
     padding: 20px
+    -ms-flex-wrap: wrap
     flex-wrap: wrap
     a i
         font-size: 18px
