--- a/css/_menu.sass
+++ b/css/_menu.sass
@@ -1,8 +1,14 @@
 // -----------logo y contacto
 .logoYcontacto
     width: 50%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: space-evenly
+    -ms-flex-pack: space-evenly
     justify-content: space-evenly
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
 
 .logo__imagen
@@ -11,14 +17,25 @@
 .tel-mail__contacto
     width: 100%
     height: 88%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-align: start
+    -ms-flex-align: start
     align-items: flex-start
+    -webkit-box-orient: vertical
+    -webkit-box-direction: normal
+    -ms-flex-direction: column
     flex-direction: column
     color: #fff
     font-size: 12px
 
 .tel-mail__contenedor
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
 
 .tel-mail__icono
@@ -41,14 +58,26 @@
     z-index: 100
     width: 100%
     margin: 0 auto
+    -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, .2)
     box-shadow: 1px 1px 10px rgba(0, 0, 0, .2)
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+
 
 .menu__lista
     list-style: none
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
 
 .menu__lista li
@@ -59,7 +88,7 @@
     display: none
     background: #555555
     position: absolute
-    width: 100%
+    width: 120%
     z-index: 100
 
 .menu__children li
@@ -68,7 +97,6 @@
 
 .menu__children li a
     display: block
-    text-align: center
     font-size: 14px
 
 .menu__lista li:hover .menu__children
