--- a/css/_quienesSomos.sass
+++ b/css/_quienesSomos.sass
@@ -2,9 +2,18 @@
     width: 100%
     height: 100%
     padding: 0
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
+    -webkit-box-orient: vertical
+    -webkit-box-direction: normal
+    -ms-flex-direction: column
     flex-direction: column
     color: #6c6b6b
     text-align: center
@@ -18,10 +27,16 @@
 .main__botones
     width: 100%
     height: 100px
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
-    margin: 10px 0 30px 0  
+    margin: 10px 0 30px 0 
 
 .main__boton
     background: rgb(24, 128, 95)
@@ -63,9 +78,16 @@
 
 .main__contenedor-quienes-somos
     width: 100%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: space-evenly
+    -ms-flex-pack: space-evenly
     justify-content: space-evenly
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
+    -ms-flex-wrap: wrap
     flex-wrap: wrap
 
 .main__nuestra-firma
