--- a/css/_servicios-esp.sass
+++ b/css/_servicios-esp.sass
@@ -29,7 +29,11 @@
 
 .servicios-esp__contacto
     width: 100%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
     
 .servicios-esp__boton
@@ -71,8 +75,15 @@
     padding: 20px 0
     text-align: justify
     color: #000
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
+    -webkit-box-orient: vertical
+    -webkit-box-direction: normal
+    -ms-flex-direction: column
     flex-direction: column
 
 .otros-servicios__item
@@ -83,9 +94,18 @@
     width: 100%
     height: 100%
     margin: 30px 0
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: space-evenly
+    -ms-flex-pack: space-evenly
     justify-content: space-evenly
+    -webkit-box-orient: horizontal
+    -webkit-box-direction: reverse
+    -ms-flex-direction: row-reverse
     flex-direction: row-reverse
+    -webkit-box-align: start
+    -ms-flex-align: start
     align-items: flex-start
 
 .otros-servicios__img
