--- a/css/_slider.sass
+++ b/css/_slider.sass
@@ -3,8 +3,14 @@
     height: 100%
     position: absolute
     top: 0
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: justify
+    -ms-flex-pack: justify
     justify-content: space-between
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
     font-size: 20px
 
@@ -28,7 +34,11 @@
     position: absolute
     bottom: 0
     width: 100%
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
     justify-content: center
     margin-bottom: 15px
 
@@ -76,12 +86,6 @@
 
 .slider.fade
     min-height: 200px
-
-// .slider.fade img
-//     width: 100%
-//     height: 100%
-//     // min-height: 300px
-//     overflow: hidden
 
 .slide-fotos
     background: #fff
