--- a/css/_staff.sass
+++ b/css/_staff.sass
@@ -11,8 +11,13 @@
     margin-bottom: 20px
 
 .main__staff
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: space-evenly
+    -ms-flex-pack: space-evenly
     justify-content: space-evenly
+    -ms-flex-wrap: wrap
     flex-wrap: wrap
     padding-bottom: 50px
 
@@ -22,11 +27,23 @@
     margin-bottom: 30px
     border-radius: 5px
     padding: 20px 30px
+    -webkit-transition: 0.5s
+    -o-transition: 0.5s
     transition: 0.5s
+    display: -webkit-box
+    display: -ms-flexbox
     display: flex
+    -webkit-box-pack: start
+    -ms-flex-pack: start
     justify-content: start
+    -webkit-box-align: center
+    -ms-flex-align: center
     align-items: center
+    -webkit-box-orient: horizontal
+    -webkit-box-direction: normal
+    -ms-flex-direction: row
     flex-direction: row
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)
 
 .main__foto-staff
