--- a/css/_header.sass
+++ b/css/_header.sass
@@ -26,10 +26,9 @@
     text-align: center
 
 .header__frase
-    margin-top: 10%
+    margin-top: 200px
     font-size: 20px
     margin-bottom: 10px
 
 .header__frase-autor
-    font-weight: 300
-    font-size: 15px
+    font-size: 18px
