--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -120,7 +120,7 @@
         float: right
 
     .header__frase
-        margin-top: 80%
+        margin-top: 200px
 
     .main__descripcion-presentacion
         font-size: 15px
@@ -316,7 +316,7 @@
         font-size: 10px
 
     .header__frase
-        margin-top: 90%
+        margin-top: 150px
         font-size: 14px
 
     .header__frase-autor
