--- a/css/main.css
+++ b/css/main.css
@@ -28,14 +28,13 @@
 }
 
 .header__frase {
-  margin-top: 10%;
+  margin-top: 200px;
   font-size: 20px;
   margin-bottom: 10px;
 }
 
 .header__frase-autor {
-  font-weight: 300;
-  font-size: 15px;
+  font-size: 18px;
 }
 
 .logoYcontacto {
@@ -1142,7 +1141,7 @@ footer {
   }
 
   .header__frase {
-    margin-top: 80%;
+    margin-top: 200px;
   }
 
   .main__descripcion-presentacion {
@@ -1384,7 +1383,7 @@ footer {
   }
 
   .header__frase {
-    margin-top: 90%;
+    margin-top: 150px;
     font-size: 14px;
   }
 
