--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -119,12 +119,15 @@
     .menu__lista li .caret
         float: right
 
+    .header
+        height: 50vh
+
     .header__frase
-        margin-top: 200px
+        top: 36vh
 
     .main__descripcion-presentacion
-        font-size: 15px
-        margin: 0 50px
+        font-size: 16px
+        margin: 0 20px
 
     .main__boton
         margin: 10px
@@ -315,16 +318,20 @@
         margin-top: 7px
         font-size: 10px
 
+    .contenedor-logoPortada img
+        padding-top: 15px
+        z-index: -1
+
     .header__frase
-        margin-top: 150px
+        margin: 0 10px 0 0
         font-size: 14px
 
     .header__frase-autor
-        font-size: 14px
+        font-size: 12px
 
     .main__descripcion-presentacion
         margin: 0 30px
-        font-size: 14px
+        font-size: 15px
         padding-bottom: 10px
 
     .slide__titulos .servicios-esp__especialidad
