--- a/css/_header.sass
+++ b/css/_header.sass
@@ -1,10 +1,5 @@
 .header
-    height: 100vh
-    background-image: url(../img/logo-alta1.jpg)
-    background-repeat: no-repeat
-    background-size: cover
-    background-attachment: fixed
-    background-position: center
+    height: 65vh
 
 .header__contenedor-frase
     padding: 0
@@ -23,12 +18,25 @@
     -ms-flex-direction: column
     flex-direction: column
     color: #000
-    text-align: center
+
+.contenedor-logoPortada
+    position: relative
+    width: 100%
+    display: -webkit-box
+    display: -ms-flexbox
+    display: flex
+    -webkit-box-pack: center
+    -ms-flex-pack: center
+    justify-content: center
+    img
+        padding-top: 5px
+        width: 290px
 
 .header__frase
-    margin-top: 200px
+    position: absolute
+    top: 35vh
+    text-align: center
     font-size: 20px
-    margin-bottom: 10px
 
 .header__frase-autor
-    font-size: 18px
+    font-size: 16px
