--- a/css/_quienesSomos.sass
+++ b/css/_quienesSomos.sass
@@ -20,9 +20,12 @@
     background: #e6e6e6
 
 .main__descripcion-presentacion
-    padding-top: 50px
+    padding-top: 30px
     padding-bottom: 15px
     margin: 0 100px
+    font-size: 20px
+    font-weight: bold
+    color: #000
 
 .main__botones
     width: 100%
