--- a/css/_slider.sass
+++ b/css/_slider.sass
@@ -87,6 +87,10 @@
 .slider.fade
     min-height: 200px
 
+.slider.fade p b
+    font-size: 18px
+    margin-bottom: 5px
+
 .slide-fotos
     background: #fff
     width: 100%
