--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -147,9 +147,12 @@
     .servicios-esp__boton
         font-size: 12px
         
+    .slider.fade p b
+        font-size: 14px
+
     .slider.fade p 
         height: 100px
-        font-size: 12px
+        font-size: 11px
         padding: 5px 20px
 
     .alta
