--- a/css/main.css
+++ b/css/main.css
@@ -520,6 +520,11 @@ p {
   min-height: 200px;
 }
 
+.slider.fade p b {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
 .slide-fotos {
   background: #fff;
   width: 100%;
@@ -1189,9 +1194,13 @@ footer {
     font-size: 12px;
   }
 
+  .slider.fade p b {
+    font-size: 14px;
+  }
+
   .slider.fade p {
     height: 100px;
-    font-size: 12px;
+    font-size: 11px;
     padding: 5px 20px;
   }
 
