--- a/css/_header.sass
+++ b/css/_header.sass
@@ -1,9 +1,11 @@
 .header
-    height: 65vh
-
-.header__contenedor-frase
-    padding: 0
     height: 100%
+
+.contenedor-logoPortada
+    position: relative
+    width: 100%
+    height: 100%
+    max-height: 300px
     display: -webkit-box
     display: -ms-flexbox
     display: flex
@@ -17,24 +19,17 @@
     -webkit-box-direction: normal
     -ms-flex-direction: column
     flex-direction: column
-    color: #000
-
-.contenedor-logoPortada
-    position: relative
-    width: 100%
-    display: -webkit-box
-    display: -ms-flexbox
-    display: flex
-    -webkit-box-pack: center
-    -ms-flex-pack: center
-    justify-content: center
     img
-        padding-top: 5px
-        width: 290px
+        display: inline-block
+        margin: 5px auto
+        width: 100%
+        height: auto
+        max-width: 290px
+        z-index: -1
 
 .header__frase
     position: absolute
-    top: 35vh
+    top: 210px
     text-align: center
     font-size: 20px
 
