--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -119,11 +119,11 @@
     .menu__lista li .caret
         float: right
 
-    .header
-        height: 50vh
-
     .header__frase
-        top: 36vh
+        top: 200px
+
+    .contenedor-logoPortada
+        max-height: 290px
 
     .main__descripcion-presentacion
         font-size: 16px
@@ -322,11 +322,10 @@
         font-size: 10px
 
     .contenedor-logoPortada img
-        padding-top: 3px
+        width: 250px
         z-index: -1
 
     .header__frase
-        margin: 0 10px 0 0
         font-size: 14px
 
     .header__frase-autor
