--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
 .header {
-  height: 65vh;
+  height: 100%;
 }
 
-.header__contenedor-frase {
-  padding: 0;
+.contenedor-logoPortada {
+  position: relative;
+  width: 100%;
   height: 100%;
+  max-height: 300px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -18,27 +20,19 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  color: #000;
-}
-
-.contenedor-logoPortada {
-  position: relative;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
 }
 .contenedor-logoPortada img {
-  padding-top: 5px;
-  width: 290px;
+  display: inline-block;
+  margin: 5px auto;
+  width: 100%;
+  height: auto;
+  max-width: 290px;
+  z-index: -1;
 }
 
 .header__frase {
   position: absolute;
-  top: 35vh;
+  top: 210px;
   text-align: center;
   font-size: 20px;
 }
@@ -289,7 +283,7 @@ p {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin: 10px 0 30px 0;
+  margin: 5px 0 30px 0;
 }
 
 .main__boton {
@@ -298,7 +292,7 @@ p {
   border-radius: 10px;
   padding: 15px;
   color: #FFF;
-  margin: 10px 20px;
+  margin: 5px 20px;
   cursor: pointer;
   transition: 0.3s ease all;
   font-size: 15px;
@@ -1158,12 +1152,12 @@ footer {
     float: right;
   }
 
-  .header {
-    height: 50vh;
+  .header__frase {
+    top: 200px;
   }
 
-  .header__frase {
-    top: 36vh;
+  .contenedor-logoPortada {
+    max-height: 290px;
   }
 
   .main__descripcion-presentacion {
@@ -1409,12 +1403,11 @@ footer {
   }
 
   .contenedor-logoPortada img {
-    padding-top: 3px;
+    width: 250px;
     z-index: -1;
   }
 
   .header__frase {
-    margin: 0 10px 0 0;
     font-size: 14px;
   }
 
