--- a/css/main.css
+++ b/css/main.css
@@ -273,7 +273,6 @@ p {
 
 .main__botones {
   width: 100%;
-  height: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -535,7 +534,7 @@ p {
   text-align: center;
   font-weight: 600;
   color: #000;
-  margin-bottom: 0;
+  margin-bottom: 25px;
 }
 
 .servicios-esp {
