--- a/css/_contacto.sass
+++ b/css/_contacto.sass
@@ -150,3 +150,19 @@
     color: #fff
     font-size: 15px
     text-align: center
+
+// ----------------mapas
+
+.contenedor-mapas
+    width: 100%
+    display: -webkit-box
+    display: -ms-flexbox
+    display: flex
+    -ms-flex-pack: distribute
+    justify-content: space-around
+    -webkit-box-align: center
+    -ms-flex-align: center
+    align-items: center
+    -ms-flex-wrap: wrap
+    flex-wrap: wrap
+    margin: 30px auto
