--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -259,6 +259,13 @@
         -ms-flex-align: center
         align-items: center
 
+    .mapa
+        margin: 15px
+
+    .mapa iframe
+        width: 380px
+        height: 200px
+
     .overlay__contacto
         width: 95%
 
@@ -381,6 +388,13 @@
         color: #fff
         font-size: 10px
         text-align: center
+
+    .mapa
+        margin: 10px
+
+    .mapa iframe
+        width: 280px
+        height: 150px
 
     .footer__oficina h3, .footer__oficina p
         font-size: 12px
