--- a/css/main.css
+++ b/css/main.css
@@ -909,6 +909,21 @@ p {
   text-align: center;
 }
 
+.contenedor-mapas {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin: 30px auto;
+}
+
 footer {
   width: 100%;
   height: 100%;
@@ -1326,6 +1341,15 @@ footer {
     align-items: center;
   }
 
+  .mapa {
+    margin: 15px;
+  }
+
+  .mapa iframe {
+    width: 380px;
+    height: 200px;
+  }
+
   .overlay__contacto {
     width: 95%;
   }
@@ -1472,6 +1496,15 @@ footer {
     color: #fff;
     font-size: 10px;
     text-align: center;
+  }
+
+  .mapa {
+    margin: 10px;
+  }
+
+  .mapa iframe {
+    width: 280px;
+    height: 150px;
   }
 
   .footer__oficina h3, .footer__oficina p {
