--- a/css/_contacto.sass
+++ b/css/_contacto.sass
@@ -155,6 +155,7 @@
 
 .contenedor-mapas
     width: 100%
+    background: #e6e6e6
     display: -webkit-box
     display: -ms-flexbox
     display: flex
@@ -165,4 +166,5 @@
     align-items: center
     -ms-flex-wrap: wrap
     flex-wrap: wrap
-    margin: 30px auto
+    // margin: 30px auto
+    padding: 30px 0
