--- a/css/main.css
+++ b/css/main.css
@@ -911,6 +911,7 @@ p {
 
 .contenedor-mapas {
   width: 100%;
+  background: #e6e6e6;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -921,7 +922,7 @@ p {
   align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  margin: 30px auto;
+  padding: 30px 0;
 }
 
 footer {
