--- a/css/_slider.sass
+++ b/css/_slider.sass
@@ -94,8 +94,10 @@
 .slide-fotos
     background: #fff
     width: 100%
-    min-width: 100%
     height: 100%
+
+.slider.fade img
+    margin: auto
 
 .slide__titulos .main__boton
     margin-top: 0
