--- a/css/main.css
+++ b/css/main.css
@@ -521,8 +521,11 @@ p {
 .slide-fotos {
   background: #fff;
   width: 100%;
-  min-width: 100%;
   height: 100%;
+}
+
+.slider.fade img {
+  margin: auto;
 }
 
 .slide__titulos .main__boton {
