--- a/css/_responsive.sass
+++ b/css/_responsive.sass
@@ -155,7 +155,7 @@
         font-size: 11px
         padding: 5px 20px
 
-    .alta
+    .slider.fade .alta
         display: none
 
     .slider.fade img
